[package]
name = "ab"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
description = "ab is a very small web3 toolbox."
readme = "README.md"
repository = "https://github.com/dravenk/ab/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ab"
keywords = ["ab", "web3", "blockchain" ]

[dependencies]
